fixed select bug on selector, right aligned hub table, fixed delete listing bug
Former-commit-id: d2e287dbad2cd5f2530ffd787f835de8436e937a
Former-commit-id: 4898ee161e1c4236619154c953d1f06c9977e110

--- a/server/public/sass/prod_profile/profile_mylistings.scss
+++ b/server/public/sass/prod_profile/profile_mylistings.scss
@@ -45,6 +45,12 @@
   margin-right:5px;
 }
 
+//there is an active filter
+select.is-active.is-primary {
+  border: 1px solid $primary !important;
+  outline: 0;
+}
+
 //domain expenses
 .expense-button-wrapper {
   padding-right:0 !important;
